* Improved design for compact mode for function list directive. * Added popover for full function name to function list directive. * Fixed wrong font name being used for monospace code.

--- a/src/webview/client-files/app/css/app.css
+++ b/src/webview/client-files/app/css/app.css
@@ -304,3 +304,36 @@
             transform: scale(1);
   }
 }
+
+/**
+ * Bootstrap Dynamic Width for Popover Fix
+ * Source: http://stackoverflow.com/questions/15776487/bootstrap-popover-width-for-popover-inner
+ */
+.popover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1010;
+  display: none;
+  max-width: 600px;
+  padding: 1px;
+  text-align: left;
+  white-space: normal;
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+     -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -webkit-background-clip: padding-box;
+     -moz-background-clip: padding;
+          background-clip: padding-box;
+}
+
+.src-mono {
+  font-family: mono;
+  font-size: 12px;
+}
